feat : githubAction 일부 수정(43)
주요 변경사항:

application.yml 생성을 가장 먼저 수행
Gradle 설정 전에 리소스 파일이 있는지 확인
빌드 전 리소스 디렉토리 구조 확인 단계 추가
더 자세한 검증 로직 추가
이렇게 하면:

Gradle이 리소스를 처리하기 전에 application.yml이 준비됨
각 단계에서 파일의 존재와 위치를 확인할 수 있음
문제가 발생하면 어느 단계에서 발생했는지 파악 가능

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,26 +33,50 @@ jobs:
           echo "${{ secrets.APPLICATION_YML }}" | base64 -d > application.yml
           echo "Created application.yml:"
           cat application.yml
+          echo "Resources directory contents:"
+          ls -la
 
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
+
+
       - name: Grant Execute Permission For Gradlew
         run: chmod +x gradlew
 
+      - name: Verify Resources Before Build
+        run: |
+          echo "Current directory structure:"
+          ls -R ./src/main/resources/
+          echo "application.yml contents:"
+          cat ./src/main/resources/application.yml
+
       - name: Build with Gradle
         run: ./gradlew build --info
+
 
       - name: Verify JAR contents
         run: |
           echo "Verifying JAR contents:"
           for jar in build/libs/*.jar; do
-            echo "Checking $jar for application.yml:"
-            jar tvf "$jar" | grep -i "application.yml" || echo "Warning: application.yml not found in $jar"
-            jar xf "$jar" BOOT-INF/classes/application.yml
-            echo "Contents of extracted application.yml:"
-            cat BOOT-INF/classes/application.yml
+            echo "Checking $jar structure:"
+            jar tvf "$jar" | grep -i "yml"
+          
+            # 임시 디렉토리에 추출
+            mkdir -p temp_extract
+            cd temp_extract
+          
+            # jar 파일에서 모든 yml 파일 추출
+            jar xf "../$jar" $(jar tvf "../$jar" | grep -i "yml")
+          
+            # 추출된 파일들의 위치 확인
+            find . -name "*.yml" -exec echo "Found yml at: {}" \; -exec cat {} \;
+          
+            # 정리
+            cd ..
+            rm -rf temp_extract
           done
+
 
       - name: Create build context
         run: |
