--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -81,14 +81,29 @@ jobs:
       - name: Create build context
         run: |
           mkdir -p docker-build
-          cp build/libs/*[!plain].jar docker-build/app.jar
-
+          # JAR 파일 찾기 및 복사
+          EXEC_JAR=$(find build/libs/ -name "*.jar" -not -name "*plain.jar" -type f)
+          
+          if [ -z "$EXEC_JAR" ]; then
+            echo "Error: No executable JAR file found"
+            exit 1
+          fi
+          
+          echo "Found executable JAR: $EXEC_JAR"
+          cp "$EXEC_JAR" docker-build/app.jar
+          
+          # Dockerfile 복사
+          cp Dockerfile docker-build/
+          
+          echo "Build context contents:"
+          ls -la docker-build/
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -115,19 +130,6 @@ jobs:
           port: 22
           envs: DOCKER_USERNAME,RDS_ENDPOINT,DB_NAME,DB_USERNAME,DB_PASSWORD,REDIS_HOST,REDIS_PORT,PUBLIC_IP_V4,JWT_SECRET_KEY
           script: |
-            # Create backup directory
-            mkdir -p ~/backups
-            
-            # Backup existing files if they exist
-            if [ -f docker-compose.yml ]; then
-              cp docker-compose.yml ~/backups/docker-compose.yml.$(date +%Y%m%d_%H%M%S)
-              echo "Created backup of existing docker-compose.yml"
-            fi
-            
-            if [ -f nginx.conf ]; then
-              cp nginx.conf ~/backups/nginx.conf.$(date +%Y%m%d_%H%M%S)
-              echo "Created backup of existing nginx.conf"
-            fi
             
             # Update .env file with latest values
             cat << EOF > .env
