--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,6 +11,11 @@ on:
 permissions:
   contents: read
 
+env:
+  DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/spring
+  API_DOMAIN: api.togerun.shop  # [추가] 도메인 직접 지정
+  EMAIL: ${{ secrets.EMAIL }}    # [추가] Let's Encrypt 이메일
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -75,13 +80,20 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           PUBLIC_IP_V4: ${{ secrets.PUBLIC_IP_V4 }}
+          EMAIL: ${{ secrets.EMAIL }}          # [추가] Let's Encrypt 이메일
+          REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}  # [추가] Redis 비밀번호
         with:
           host: ${{ secrets.HOST_DEV }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
-          envs: DOCKER_USERNAME,PUBLIC_IP_V4
+          envs: DOCKER_USERNAME,PUBLIC_IP_V4,EMAIL,REDIS_PASSWORD
           script: |
+            # [추가] SSL 및 certbot 디렉토리 생성
+            mkdir -p certbot/conf
+            mkdir -p certbot/www
+            mkdir -p ssl
+            
             # Create docker-compose.yml
             cat << EOF > docker-compose.yml
             version: '3'
@@ -92,8 +104,12 @@ jobs:
                 container_name: nginx
                 ports:
                   - "80:80"
+                  - "443:443"    # [추가] HTTPS 포트
                 volumes:
                   - ./nginx.conf:/etc/nginx/nginx.conf:ro
+                  - ./ssl:/etc/nginx/ssl:ro  # [추가] SSL 인증서
+                  - ./certbot/conf:/etc/letsencrypt    # [추가] Let's Encrypt 설정
+                  - ./certbot/www:/var/www/certbot     # [추가] ACME challenge
                 depends_on:
                   - spring-boot-1
                   - spring-boot-2
@@ -101,6 +117,15 @@ jobs:
                 networks:
                   - ubuntu_this_network
                 restart: always
+            
+              # [추가] certbot 서비스
+              certbot:
+                image: certbot/certbot
+                container_name: certbot
+                volumes:
+                  - ./certbot/conf:/etc/letsencrypt
+                  - ./certbot/www:/var/www/certbot
+                entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait \$\${!}; done;'"
             
               spring-boot-1: &spring-service
                 container_name: spring-boot-1
@@ -124,6 +149,7 @@ jobs:
               redis:
                 image: redis:alpine
                 container_name: redis_boot
+                command: redis-server --requirepass "\${REDIS_PASSWORD}"  # [추가] Redis 비밀번호
                 volumes:
                   - redis:/data
                 networks:
@@ -138,7 +164,7 @@ jobs:
               redis:
             EOF
             
-            # Create nginx.conf
+            # [추가] 초기 nginx.conf (HTTP -> HTTPS 리다이렉트)
             cat << EOF > nginx.conf
             events {
               worker_connections 1024;
@@ -154,14 +180,16 @@ jobs:
             
               server {
                 listen 80;
-                server_name \${PUBLIC_IP_V4};
+                listen [::]:80;
+                server_name api.togerun.shop;
+            
+                # [추가] Let's Encrypt ACME Challenge
+                location /.well-known/acme-challenge/ {
+                    root /var/www/certbot;
+                }
             
                 location / {
-                  proxy_pass http://spring-app;
-                  proxy_set_header Host \$host;
-                  proxy_set_header X-Real-IP \$remote_addr;
-                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                  proxy_set_header X-Forwarded-Proto \$scheme;  
+                  return 301 https://\$host\$request_uri;
                 }
               }
             }
@@ -173,6 +201,103 @@ jobs:
             
             # Create network if not exists
             docker network create ubuntu_this_network || true
+            
+            # [추가] nginx 먼저 시작 (Let's Encrypt 용)
+            docker-compose up -d nginx
+            
+            # [추가] Let's Encrypt 인증서 발급
+            docker-compose run --rm certbot certonly \
+              --webroot \
+              --webroot-path /var/www/certbot \
+              --email \${EMAIL} \
+              --agree-tos \
+              --no-eff-email \
+              -d api.togerun.shop
+            
+            # [추가] HTTPS 설정이 포함된 최종 nginx.conf
+            cat << EOF > nginx.conf
+            events {
+              worker_connections 1024;
+            }
+            
+            http {
+              upstream spring-app {
+                least_conn;
+                server spring-boot-1:8080;
+                server spring-boot-2:8080;
+                server spring-boot-3:8080;
+              }
+            
+              # HTTP -> HTTPS 리다이렉트
+              server {
+                listen 80;
+                listen [::]:80;
+                server_name api.togerun.shop;
+            
+                location /.well-known/acme-challenge/ {
+                    root /var/www/certbot;
+                }
+            
+                location / {
+                  return 301 https://\$host\$request_uri;
+                }
+              }
+            
+              # HTTPS 서버
+              server {
+                listen 443 ssl http2;
+                listen [::]:443 ssl http2;
+                server_name api.togerun.shop;
+            
+                # SSL 설정
+                ssl_certificate /etc/letsencrypt/live/api.togerun.shop/fullchain.pem;
+                ssl_certificate_key /etc/letsencrypt/live/api.togerun.shop/privkey.pem;
+            
+                # SSL 보안 설정
+                ssl_protocols TLSv1.2 TLSv1.3;
+                ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+                ssl_prefer_server_ciphers off;
+                ssl_session_cache shared:SSL:10m;
+                ssl_session_timeout 10m;
+            
+                # 보안 헤더
+                add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+                add_header X-Frame-Options "SAMEORIGIN";
+                add_header X-Content-Type-Options "nosniff";
+                add_header X-XSS-Protection "1; mode=block";
+            
+                # CORS 설정
+                add_header 'Access-Control-Allow-Origin' 'https://www.togerun.shop' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' '*';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+            
+                location / {
+                  # OPTIONS 요청 처리
+                  if (\$request_method = 'OPTIONS') {
+                    add_header 'Access-Control-Allow-Origin' 'https://www.togerun.shop' always;
+                    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                    add_header 'Access-Control-Allow-Headers' '*';
+                    add_header 'Access-Control-Allow-Credentials' 'true';
+                    add_header 'Content-Type' 'text/plain charset=UTF-8';
+                    add_header 'Content-Length' 0;
+                    return 204;
+                  }
+
+                  proxy_pass http://spring-app;
+                  proxy_http_version 1.1;
+                  proxy_set_header Host \$host;
+                  proxy_set_header X-Real-IP \$remote_addr;
+                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto \$scheme;
+            
+                  # WebSocket 설정
+                  proxy_set_header Upgrade \$http_upgrade;
+                  proxy_set_header Connection "upgrade";
+                }
+              }
+            }
+            EOF
             
             # Pull latest images and restart
             docker-compose pull
