--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -176,7 +176,7 @@ jobs:
               redis:
             EOF
             
-            # 초기 nginx.conf 생성 (HTTP -> HTTPS 리다이렉트)
+            # nginx.conf 생성 (HTTPS 설정 포함)
             cat << EOF > nginx.conf
             events {
               worker_connections 1024;
@@ -203,106 +203,32 @@ jobs:
                   return 301 https://\$host\$request_uri;
                 }
               }
-            }
-            EOF
-            
-            # 기존 Docker 컨테이너 정리
-            docker-compose down --remove-orphans
-            docker image prune -f
-            
-            # Docker 네트워크 생성 (없는 경우)
-            docker network create ubuntu_this_network || true
-            
-            # SSL 인증서 파일 존재 여부 확인
-            if [ ! -d "./certbot/conf/live/api.togerun.shop" ]; then
-              echo "SSL certificates not found. Initiating first-time certificate acquisition..."
-            
-              # nginx 컨테이너 시작 (초기 HTTP 설정)
-              docker-compose up -d nginx
-            
-              # 잠시 대기하여 nginx가 완전히 시작되도록 함
-              sleep 10
-            
-              # Let's Encrypt 인증서 최초 발급
-              docker-compose run --rm certbot certonly \
-                --webroot \
-                --webroot-path /var/www/certbot \
-                --email \${EMAIL} \
-                --agree-tos \
-                --no-eff-email \
-                -d api.togerun.shop
-            
-              # 인증서 발급 확인
-              if [ ! -d "./certbot/conf/live/api.togerun.shop" ]; then
-                echo "Failed to acquire SSL certificates. Exiting..."
-                exit 1
-              fi
-            
-              echo "SSL certificates successfully acquired!"
-            else
-              echo "SSL certificates already exist. Proceeding with deployment..."
-            fi
-            
-            # HTTPS 설정이 포함된 최종 nginx.conf 생성
-            cat << EOF > nginx.conf
-            events {
-              worker_connections 1024;
-            }
-            
-            http {
-              upstream spring-app {
-                least_conn;
-                server spring-boot-1:8080;
-                server spring-boot-2:8080;
-                server spring-boot-3:8080;
-              }
-            
-              # HTTP -> HTTPS 리다이렉트
-              server {
-                listen 80;
-                listen [::]:80;
-                server_name api.togerun.shop;
-            
-                location /.well-known/acme-challenge/ {
-                    root /var/www/certbot;
-                }
-            
-                location / {
-                  return 301 https://\$host\$request_uri;
-                }
-              }
-            
-              # HTTPS 서버
+
               server {
                 listen 443 ssl http2;
                 listen [::]:443 ssl http2;
                 server_name api.togerun.shop;
             
-                # SSL 설정
                 ssl_certificate /etc/letsencrypt/live/api.togerun.shop/fullchain.pem;
                 ssl_certificate_key /etc/letsencrypt/live/api.togerun.shop/privkey.pem;
             
-                # SSL 보안 설정
                 ssl_protocols TLSv1.2 TLSv1.3;
                 ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
                 ssl_prefer_server_ciphers off;
                 ssl_session_cache shared:SSL:10m;
                 ssl_session_timeout 10m;
             
-                # 보안 헤더
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
                 add_header X-Frame-Options "SAMEORIGIN";
                 add_header X-Content-Type-Options "nosniff";
                 add_header X-XSS-Protection "1; mode=block";
             
-                # CORS 설정
                 add_header 'Access-Control-Allow-Origin' 'https://www.togerun.shop' always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
                 add_header 'Access-Control-Allow-Headers' '*';
                 add_header 'Access-Control-Allow-Credentials' 'true';
             
                 location / {
-                  # OPTIONS 요청 처리
                   if (\$request_method = 'OPTIONS') {
                     add_header 'Access-Control-Allow-Origin' 'https://www.togerun.shop' always;
                     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
@@ -320,13 +246,19 @@ jobs:
                   proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
                   proxy_set_header X-Forwarded-Proto \$scheme;
             
-                  # WebSocket 설정
                   proxy_set_header Upgrade \$http_upgrade;
                   proxy_set_header Connection "upgrade";
                 }
               }
             }
             EOF
+            
+            # 기존 Docker 컨테이너 정리
+            docker-compose down --remove-orphans
+            docker image prune -f
+            
+            # Docker 네트워크 생성 (없는 경우)
+            docker network create ubuntu_this_network || true
             
             # 최신 이미지 풀 및 서비스 재시작
             docker-compose pull
