--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -124,9 +124,7 @@ jobs:
                   - ./certbot/conf:/etc/letsencrypt
                   - ./certbot/www:/var/www/certbot
                 depends_on:
-                  - spring-boot-1
-                  - spring-boot-2
-                  - spring-boot-3
+                  - spring-boot
                 networks:
                   - ubuntu_this_network
                 restart: always
@@ -139,24 +137,23 @@ jobs:
                   - ./certbot/www:/var/www/certbot
                 entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait \$\${!}; done;'"
             
-              spring-boot-1: &spring-service
-                container_name: spring-boot-1
+              spring-boot:
+                container_name: spring-boot
                 image: \${DOCKER_USERNAME}/spring:latest
                 expose:
                   - "8080"
+                environment:
+                  - JAVA_OPTS=-XX:+UseG1GC -Xms256m -Xmx512m
+                healthcheck:
+                  test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+                  interval: 30s
+                  timeout: 10s
+                  retries: 3
                 depends_on:
                   - redis
                 networks:
                   - ubuntu_this_network
                 restart: always
-            
-              spring-boot-2:
-                <<: *spring-service
-                container_name: spring-boot-2
-            
-              spring-boot-3:
-                <<: *spring-service
-                container_name: spring-boot-3
             
               redis:
                 image: redis:alpine
@@ -184,10 +181,7 @@ jobs:
             
             http {
               upstream spring-app {
-                least_conn;
-                server spring-boot-1:8080;
-                server spring-boot-2:8080;
-                server spring-boot-3:8080;
+                server spring-boot:8080;
               }
             
               server {
@@ -205,7 +199,8 @@ jobs:
               }
 
               server {
-                listen 443 ssl http2;
+                listen 443 ssl;
+                http2 on;
                 listen [::]:443 ssl http2;
                 server_name api.togerun.shop;
             
@@ -248,6 +243,11 @@ jobs:
             
                   proxy_set_header Upgrade \$http_upgrade;
                   proxy_set_header Connection "upgrade";
+            
+                  proxy_connect_timeout 300;
+                  proxy_send_timeout 300;
+                  proxy_read_timeout 300;
+                  send_timeout 300;
                 }
               }
             }
