--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -214,31 +214,43 @@ jobs:
                 ssl_session_timeout 10m;
             
                 location / {
+                  # 기본 보안 헤더 
                   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
                   add_header X-Frame-Options "SAMEORIGIN";
                   add_header X-Content-Type-Options "nosniff";
                   add_header X-XSS-Protection "1; mode=block";
               
+                  # CORS 헤더
                   add_header 'Access-Control-Allow-Origin' 'https://www.togerun.shop' always;
-                  add_header 'Access-Control-Allow-Credentials' 'true';
+                  add_header 'Access-Control-Allow-Credentials' 'true' always;
+                  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                  add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;  
               
                     if (\$request_method = 'OPTIONS') {
+                      add_header 'Access-Control-Allow-Origin' 'https://www.togerun.shop';  
+                      add_header 'Access-Control-Allow-Credentials' 'true';
                       add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-                      add_header 'Access-Control-Allow-Headers' '*';
+                      add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID';
                       add_header 'Content-Type' 'text/plain charset=UTF-8';
                       add_header 'Content-Length' 0;
                       return 204;
                   }
+            
+                  # SSE 관련 프록시 설정 
+                  proxy_set_header Connection '';
+                  proxy_http_version 1.1;
+                  proxy_buffering off;
+                  proxy_cache off;
+                  proxy_read_timeout 1d;
 
                   proxy_pass http://spring-app;
-                  proxy_http_version 1.1;
                   proxy_set_header Host \$host;
                   proxy_set_header X-Real-IP \$remote_addr;
                   proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
                   proxy_set_header X-Forwarded-Proto \$scheme;
             
                   proxy_set_header Upgrade \$http_upgrade;
-                  proxy_set_header Connection "upgrade";
+                  proxy_set_header Connecion "upgrade";
             
                   proxy_connect_timeout 300;
                   proxy_send_timeout 300;
