fix : Appspec.yml 환경변수 설정 스크립트 추가, workflow 에서 배포시 환경변수 전달, start_application.sh 확인 로직 추가

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -240,6 +240,9 @@ jobs:
             --application-name ${{ secrets.CODE_DEPLOY_APP_NAME }} \
             --deployment-group-name ${{ secrets.CODE_DEPLOY_GROUP_NAME }} \
             --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy.zip
+            --environment-variables \
+                DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} \
+                REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
 
       # Step 14: 배포 시간 기록
       - name: Get Current Time
