fix : 배포스크립트 생성 로직 추가

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -102,6 +102,22 @@ jobs:
           cp -r scripts/* deploy/scripts/
           chmod +x deploy/scripts/*.sh
           
+          # 환경 변수 설정 스크립트 생성
+          cat << 'EOF' > deploy/scripts/set_environment.sh
+          
+          # 환경 변수 파일 생성
+          cat << 'EOF' > /home/ubuntu/app/.env
+          DOCKER_USERNAME=${DOCKER_USERNAME}
+          REDIS_PASSWORD=${REDIS_PASSWORD}
+          ENVEOF
+          
+          # 환경 변수 파일 권한 설정
+          chmod 600 /home/ubuntu/app/.env
+          EOF
+          
+          chmod +x deploy/scripts/set_environment.sh
+      
+          
           # SSL 인증서 디렉토리 구조 생성
           mkdir -p deploy/certbot/conf
           mkdir -p deploy/certbot/www
@@ -240,9 +256,8 @@ jobs:
             --application-name ${{ secrets.CODE_DEPLOY_APP_NAME }} \
             --deployment-group-name ${{ secrets.CODE_DEPLOY_GROUP_NAME }} \
             --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy.zip
-            --environment-variables \
-                DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} \
-                REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --environment-variables "{\"DOCKER_USERNAME\":\"${{ secrets.DOCKER_USERNAME }}\",\"REDIS_PASSWORD\":\"${{ secrets.REDIS_PASSWORD }}\"}"
 
       # Step 14: 배포 시간 기록
       - name: Get Current Time
