--- a/appspec.yml
+++ b/appspec.yml
@@ -15,9 +15,13 @@ hooks:
       timeout: 300
       runas: ubuntu
   AfterInstall:
-    - location: scripts/set_environment.sh  # 새로 추가된 스크립트
+    - location: scripts/set_environment.sh
       timeout: 300
       runas: ubuntu
+      environment:
+        variables:
+          DOCKER_USERNAME: '#{DOCKER_USERNAME}'
+          REDIS_PASSWORD: '#{REDIS_PASSWORD}'
   ApplicationStart:
     - location: scripts/start_application.sh
       timeout: 600
