--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -278,7 +278,8 @@ jobs:
             --deployment-group-name ${{ secrets.CODE_DEPLOY_GROUP_NAME }} \
             --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy.zip \
             --deployment-config-name CodeDeployDefault.AllAtOnce \
-            --file-exists-behavior OVERWRITE
+            --file-exists-behavior OVERWRITE \
+            --environment-variables DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }},REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
 
       # Step 14: 배포 시간 기록
       - name: Get Current Time
