--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,7 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/app
+files_exists_behavior: overwrite
 permissions:
   - object: /home/ubuntu/app/scripts
     pattern: "*.sh"
