chore :  curl 의존성 추가, Dockerfile 에 curl 임의 추가, Docker-compose 파일에 curl 활용 추가

--- a/docker-compose.blue-green.yml
+++ b/docker-compose.blue-green.yml
@@ -35,7 +35,7 @@ services:
       - SPRING_DATA_REDIS_HOST=redis
       - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
     healthcheck:
-      test: ["CMD", "/bin/sh", "-c", "cat < /dev/null > /dev/tcp/localhost/8080"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
       interval: 10s
       timeout: 5s
       retries: 3
