fix : /home/ubuntu/app/scripts/common.sh: No such file or directory (2) appspec.yml 에서 기입

--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,8 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/app
+  - source: /scripts/common.sh
+    destination: /home/ubuntu/app/scripts/
 files_exists_behavior: overwrite
 permissions:
   - object: /home/ubuntu/app/scripts
