fix : /home/ubuntu/app/scripts/common.sh: No such file or directory (3) 애초에 githubactions 에서 원본파일을 ec2로 복사해주지 않아서 생긴 오류 local(githubactions) -> ec2 (code deploy_ appsepc))

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -102,6 +102,7 @@ jobs:
           
           # 필수 파일 존재 확인 및 복사
           required_files=(
+            "scripts/common.sh"
             "scripts/before_install.sh"
             "scripts/start_application.sh"
             "scripts/validate_service.sh"
