refactor : nginx 관련 검증 로직 개선

--- a/docker-compose.blue-green.yml
+++ b/docker-compose.blue-green.yml
@@ -8,13 +8,21 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-      - ./certbot/conf:/etc/letsencrypt:ro
-      - ./certbot/www:/var/www/certbot:ro
+      - ${APP_DIR}/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ${APP_DIR}/ssl:/etc/nginx/ssl:ro
+      - ${APP_DIR}/certbot/conf:/etc/letsencrypt:ro
+      - ${APP_DIR}/certbot/www:/var/www/certbot:ro
     networks:
       - ubuntu_this_network
     restart: always
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
+
 
   certbot:
     image: certbot/certbot
