fix : nginx health check test 변경
SSE 관련해서 timeout 되는 error 체크로 unhealthy 되는 오류를 해결하고자
upstream 서버의 타임아웃과 관계없이 nginx 자체의 상태만 확인
이미 nginx.conf에 설정된 /health 엔드포인트를 활용
실제 서비스의 가용성에 더 적합한 healthcheck

--- a/docker-compose.blue-green.yml
+++ b/docker-compose.blue-green.yml
@@ -16,7 +16,7 @@ services:
       - ubuntu_this_network
     restart: always
     healthcheck:
-      test: ["CMD", "nginx", "-t"]
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost/health"]
       interval: 30s
       timeout: 10s
       retries: 3
