--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -1,4 +1,3 @@
-version: '3.4'
 
 services:
   nginx-blue:
@@ -25,12 +24,12 @@ services:
   spring-boot-blue:
     container_name: spring-boot-blue
     image: ${DOCKER_USERNAME}/spring:latest
-    expose:
-      - "8081"
+    ports:
+      - "8082:8082"
     environment:
       - JAVA_OPTS=-XX:+UseG1GC -Xms256m -Xmx512m
       - SPRING_PROFILES_ACTIVE=blue,prod
-      - SERVER_PORT=8081
+      - SERVER_PORT=8082
       - SPRING_DATA_REDIS_HOST=redis
       - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
     healthcheck:
@@ -42,6 +41,14 @@ services:
     networks:
       - ubuntu_this_network
     restart: always
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ${APP_DIR}/certbot/conf:/etc/letsencrypt:ro
+      - ${APP_DIR}/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   redis:
     image: redis:alpine
