--- a/nginx.conf
+++ b/nginx.conf
@@ -1,157 +1,163 @@
-# events {
-#     worker_connections 1024;
-#     multi_accept on;
-#     use epoll;
-# }
-#
-# http {
-#     include /etc/nginx/mime.types;
-#     default_type application/octet-stream;
-#
-#     # 블루/그린 업스트림 설정
-#     upstream spring-app {
-#         server spring-boot-blue:8080 max_fails=3 fail_timeout=30s;
-#         server spring-boot-green:8080 backup max_fails=3 fail_timeout=30s;
-#         keepalive 32;
-#     }
-#
-#     map $http_origin $cors_origin {
-#         default "";
-#         "https://www.togerun.shop" "$http_origin";
-#         "https://togerun.shop" "$http_origin";
-#         "http://localhost:3000" "$http_origin";
-#     }
-#
-#     # Access Log Format
-#     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-#                     '$status $body_bytes_sent "$http_referer" '
-#                     '"$http_user_agent" "$http_x_forwarded_for"';
-#
-#     access_log /var/log/nginx/access.log main;
-#     error_log /var/log/nginx/error.log warn;
-#
-#     # 기본 설정
-#     sendfile on;
-#     tcp_nopush on;
-#     tcp_nodelay on;
-#     keepalive_timeout 65;
-#     types_hash_max_size 2048;
-#     client_max_body_size 100M;
-#
-#     # GZIP 압축 설정
-#     gzip on;
-#     gzip_disable "msie6";
-#     gzip_vary on;
-#     gzip_proxied any;
-#     gzip_comp_level 6;
-#     gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
-#
-#     server {
-#         listen 80;
-#         listen [::]:80;
-#         server_name api.togerun.shop;
-#
-#         location /.well-known/acme-challenge/ {
-#             root /var/www/certbot;
-#         }
-#
-#         location / {
-#             return 301 https://$host$request_uri;
-#         }
-#     }
-#
-#     server {
-#         listen 443 ssl;
-#         listen [::]:443 ssl;
-#         http2 on;
-#         server_name api.togerun.shop;
-#
-#         ssl_certificate /etc/letsencrypt/live/api.togerun.shop/fullchain.pem;
-#         ssl_certificate_key /etc/letsencrypt/live/api.togerun.shop/privkey.pem;
-#
-#         # SSL 최적화
-#         ssl_session_cache shared:SSL:10m;
-#         ssl_session_timeout 10m;
-#         ssl_session_tickets off;
-#
-#         # 최신 SSL 설정
-#         ssl_protocols TLSv1.2 TLSv1.3;
-#         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-#         ssl_prefer_server_ciphers off;
-#
-#         # OCSP Stapling
-#         ssl_stapling on;
-#         ssl_stapling_verify on;
-#         resolver 8.8.8.8 8.8.4.4 valid=300s;
-#         resolver_timeout 5s;
-#
-#         # 버퍼 설정
-#         proxy_buffer_size 128k;
-#         proxy_buffers 4 256k;
-#         proxy_busy_buffers_size 256k;
-#
-#         location / {
-#             if ($request_method = 'OPTIONS') {
-#                 add_header 'Access-Control-Allow-Origin' $cors_origin always;
-#                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-#                 add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;
-#                 add_header 'Access-Control-Allow-Credentials' 'true' always;
-#                 add_header 'Access-Control-Max-Age' 3600 always;
-#                 add_header 'Content-Type' 'text/plain charset=UTF-8' always;
-#                 add_header 'Content-Length' 0 always;
-#                 return 204;
-#             }
-#
-#             # 보안 헤더
-#             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-#             add_header X-Frame-Options "SAMEORIGIN" always;
-#             add_header X-Content-Type-Options "nosniff" always;
-#             add_header X-XSS-Protection "1; mode=block" always;
-#
-#             # CORS 헤더
-#             add_header 'Access-Control-Allow-Origin' $cors_origin always;
-#             add_header 'Access-Control-Allow-Credentials' 'true' always;
-#             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-#             add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;
-#
-#             # 프록시 설정
-#             proxy_pass http://spring-app;
-#             proxy_http_version 1.1;
-#
-#             # 헤더 설정
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#
-#             # WebSocket 지원
-#             proxy_set_header Upgrade $http_upgrade;
-#             proxy_set_header Connection "upgrade";
-#
-#             # 타임아웃 설정
-#             proxy_connect_timeout 300;
-#             proxy_send_timeout 300;
-#             proxy_read_timeout 300;
-#             send_timeout 300;
-#
-#             # SSE 설정
-#             proxy_buffering off;
-#             proxy_cache off;
-#
-#             # 쿠키 설정
-#             proxy_cookie_path / "/; secure; Domain=.togerun.shop";
-#         }
-#
-#         # 헬스체크 엔드포인트
-#         location /health {
-#             access_log off;
-#             return 200 'healthy\n';
-#         }
-#
-#         # 에러 페이지 설정
-#         error_page 500 502 503 504 /50x.html;
-#         location = /50x.html {
-#             root /usr/share/nginx/html;
-#         }
-#     }
-# }
+events {
+    worker_connections 1024;
+    multi_accept on;
+    use epoll;
+}
+
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # 블루/그린 업스트림 설정
+    upstream blue {
+      server spring-boot-blue:8081;
+      keepalive 32;
+    }
+
+    upstream green {
+      server spring-boot-green:8082;
+      keepalive 32;
+    }
+
+    map $http_origin $cors_origin {
+        default "";
+        "https://www.togerun.shop" "$http_origin";
+        "https://togerun.shop" "$http_origin";
+        "http://localhost:3000" "$http_origin";
+    }
+
+    # Access Log Format
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
+
+    # 기본 설정
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    client_max_body_size 100M;
+
+    # GZIP 압축 설정
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
+
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name api.togerun.shop;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        http2 on;
+        server_name api.togerun.shop;
+
+        ssl_certificate /etc/letsencrypt/live/api.togerun.shop/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.togerun.shop/privkey.pem;
+
+        # SSL 최적화
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_session_tickets off;
+
+        # 최신 SSL 설정
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+        ssl_prefer_server_ciphers off;
+
+        # OCSP Stapling
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        resolver 8.8.8.8 8.8.4.4 valid=300s;
+        resolver_timeout 5s;
+
+        # 버퍼 설정
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+
+        location / {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Max-Age' 3600 always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8' always;
+                add_header 'Content-Length' 0 always;
+                return 204;
+            }
+
+            # 보안 헤더
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+
+            # CORS 헤더
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Cache-Control, Content-Type, Accept, Last-Event-ID' always;
+
+            # 프록시 설정
+            proxy_pass http://blue;
+            proxy_http_version 1.1;
+
+            # 헤더 설정
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # WebSocket 지원
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            # 타임아웃 설정
+            proxy_connect_timeout 300;
+            proxy_send_timeout 300;
+            proxy_read_timeout 300;
+            send_timeout 300;
+
+            # SSE 설정
+            proxy_buffering off;
+            proxy_cache off;
+
+            # 쿠키 설정
+            proxy_cookie_path / "/; secure; Domain=.togerun.shop";
+        }
+
+        # 헬스체크 엔드포인트
+        location /health {
+            access_log off;
+            return 200 'healthy\n';
+        }
+
+        include /etc/nginx/conf.d/current.conf;
+
+        # 에러 페이지 설정
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+    }
+}
