refactor : nginx.conf 는 통합 설정 으로 변경 (4)
디렉토리 마운트 부분 수정, 컨테이너 이미지명 수정

--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -1,13 +1,14 @@
 
 services:
-  nginx-green:
+  nginx:
     image: nginx:alpine
-    container_name: nginx-green
+    container_name: nginx
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ${APP_DIR}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ${APP_DIR}/nginx/conf.d:/etc/nginx/conf.d:ro
       - ${APP_DIR}/ssl:/etc/nginx/ssl:ro
       - ${APP_DIR}/certbot/conf:/etc/letsencrypt:ro
       - ${APP_DIR}/certbot/www:/var/www/certbot:ro
