refactor : nginx.conf 는 통합 설정 으로 변경 (6)
컨테이너명 작성 오류 fix.. blue -> green, green -> blue

--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -22,14 +22,14 @@ services:
       retries: 3
       start_period: 30s
 
-  spring-boot-green:
-    container_name: spring-boot-green
+  spring-boot-blue:
+    container_name: spring-boot-blue
     image: ${DOCKER_USERNAME}/spring:latest
     ports:
       - "8081:8081"
     environment:
       - JAVA_OPTS=-XX:+UseG1GC -Xms256m -Xmx512m
-      - SPRING_PROFILES_ACTIVE=green,prod
+      - SPRING_PROFILES_ACTIVE=blue,prod
       - SERVER_PORT=8081
       - SPRING_DATA_REDIS_HOST=redis
       - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
