fix : nginx 관련해서 appspec.yml 에서 code deploy 에게 권한 부여 사용 권한 부여를 root에게 줄수도 있지만 안정성과 보안적 측면에서 해당 경로에 ubuntu 에게 권한을 주는 것이 낫다고 판단

--- a/appspec.yml
+++ b/appspec.yml
@@ -25,6 +25,20 @@ permissions:
     group: ubuntu
     type:
       - file
+  - object: /home/ubuntu/app/nginx
+    pattern: "**/*"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+    type:
+      - directory
+  - object: /home/ubuntu/app/nginx/conf.d
+    pattern: "**/*"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+    type:
+      - directory
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
